--- a/app/src/main/res/xml/scene_my_status_arc_chart_slide.xml
+++ b/app/src/main/res/xml/scene_my_status_arc_chart_slide.xml
@@ -14,6 +14,36 @@
             motion:touchAnchorSide="top"
             motion:onTouchUp="autoComplete"/>
 
+        <KeyFrameSet>
+
+            <KeyPosition
+                motion:framePosition="15"
+                motion:keyPositionType="parentRelative"
+                motion:motionTarget="@+id/vWind"
+                motion:percentX="1.018"
+                motion:percentY="0.08" />
+
+            <KeyAttribute
+                android:scaleX="0.88"
+                android:scaleY="0.88"
+                motion:framePosition="18"
+                motion:keyPositionType="parentRelative"
+                motion:motionTarget="@+id/vWind"/>
+
+            <KeyPosition
+                motion:framePosition="10"
+                motion:keyPositionType="parentRelative"
+                motion:motionTarget="@+id/vEarth"
+                motion:percentY="0.08" />
+
+            <KeyPosition
+                motion:framePosition="15"
+                motion:keyPositionType="parentRelative"
+                motion:motionTarget="@+id/vEat"
+                motion:percentY="0.08" />
+
+        </KeyFrameSet>
+
     </Transition>
 
     <ConstraintSet android:id="@+id/start_slide">
@@ -107,7 +137,6 @@
             android:layout_width="@dimen/status_life_button_reduced_width"
             android:layout_height="@dimen/status_life_button_reduced_height"
             android:layout_marginStart="16dp"
-            android:layout_marginBottom="8dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
@@ -118,7 +147,6 @@
             android:layout_width="@dimen/status_life_button_reduced_width"
             android:layout_height="@dimen/status_life_button_reduced_height"
             android:layout_marginStart="39dp"
-            android:layout_marginBottom="8dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toEndOf="@id/vHeart"
             motion:layout_constraintTop_toTopOf="parent"
@@ -129,7 +157,6 @@
             android:layout_width="@dimen/status_life_button_reduced_width"
             android:layout_height="@dimen/status_life_button_reduced_height"
             android:layout_marginStart="39dp"
-            android:layout_marginBottom="8dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toEndOf="@id/vTime"
             motion:layout_constraintTop_toTopOf="parent"
@@ -139,10 +166,8 @@
             android:id="@+id/vWind"
             android:layout_width="@dimen/status_life_button_reduced_width"
             android:layout_height="@dimen/status_life_button_reduced_height"
-            android:layout_marginEnd="39dp"
-            android:layout_marginBottom="8dp"
             motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toStartOf="@id/vEarth"
+            motion:layout_constraintStart_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintVertical_bias="0.08" />
 
@@ -150,10 +175,8 @@
             android:id="@+id/vEarth"
             android:layout_width="@dimen/status_life_button_reduced_width"
             android:layout_height="@dimen/status_life_button_reduced_height"
-            android:layout_marginEnd="39dp"
-            android:layout_marginBottom="8dp"
             motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toStartOf="@id/vEat"
+            motion:layout_constraintStart_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintVertical_bias="0.08" />
 
@@ -161,10 +184,8 @@
             android:id="@+id/vEat"
             android:layout_width="@dimen/status_life_button_reduced_width"
             android:layout_height="@dimen/status_life_button_reduced_height"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
             motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintVertical_bias="0.08" />
 
