completed viewpager change page shared objects animation

--- a/app/src/main/res/layout/fragment_my_status.xml
+++ b/app/src/main/res/layout/fragment_my_status.xml
@@ -16,15 +16,24 @@
         android:id="@+id/motionLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:progress='@{viewModel.animationProgress}'
+        android:progress='@{safeUnbox(viewModel.animationProgress)}'
         app:layoutDescription="@xml/scene_my_status_slide"
         tools:showPaths="true">
+
+        <RelativeLayout
+            android:id="@+id/toolbarPlaceHolder"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vpRoot"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adapter='@{viewModel.vpAdapter}' />
+            android:layout_height="0dp"
+            android:adapter='@{viewModel.vpAdapter}'
+            app:layout_constraintTop_toBottomOf="@id/toolbarPlaceHolder"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <Button
             android:id="@+id/previousButton"
