--- a/app/src/main/res/xml/scene_my_status_arc_chart_slide.xml
+++ b/app/src/main/res/xml/scene_my_status_arc_chart_slide.xml
@@ -17,7 +17,7 @@
         <KeyFrameSet>
 
             <KeyPosition
-                motion:framePosition="10"
+                motion:framePosition="11"
                 motion:keyPositionType="parentRelative"
                 motion:motionTarget="@+id/vHeart"
                 motion:percentY="0.08" />
@@ -49,15 +49,17 @@
                 motion:motionTarget="@+id/vWind"/>
 
             <KeyPosition
-                motion:framePosition="10"
+                motion:framePosition="31"
                 motion:keyPositionType="parentRelative"
                 motion:motionTarget="@+id/vEarth"
+                motion:percentX="0.941"
                 motion:percentY="0.08" />
 
             <KeyPosition
                 motion:framePosition="15"
                 motion:keyPositionType="parentRelative"
                 motion:motionTarget="@+id/vEat"
+                motion:percentX="0.96"
                 motion:percentY="0.08" />
 
         </KeyFrameSet>
@@ -70,71 +72,58 @@
             android:id="@+id/vUser"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.337" />
+            motion:layout_constraintBottom_toBottomOf="@id/lMask"
+            motion:layout_constraintEnd_toEndOf="@id/lMask"
+            motion:layout_constraintTop_toTopOf="@id/lMask"
+            motion:layout_constraintStart_toStartOf="@id/lMask" />
 
         <Constraint
             android:id="@+id/vHeart"
             android:layout_width="@dimen/status_life_button_width"
             android:layout_height="@dimen/status_life_button_height"
-            android:layout_marginEnd="110dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.50" />
+            motion:layout_constraintCircle="@id/lMask"
+            motion:layout_constraintCircleRadius="@dimen/status_life_button_circle_radius"
+            motion:layout_constraintCircleAngle="150"/>
 
         <Constraint
             android:id="@+id/vTime"
             android:layout_width="@dimen/status_life_button_width"
             android:layout_height="@dimen/status_life_button_height"
-            android:layout_marginStart="110dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.50" />
+            motion:layout_constraintCircle="@id/lMask"
+            motion:layout_constraintCircleRadius="105dp"
+            motion:layout_constraintCircleAngle="210"/>
 
         <Constraint
             android:id="@+id/vFire"
-            android:layout_width="32dp"
+            android:layout_width="@dimen/status_life_button_width"
             android:layout_height="@dimen/status_life_button_height"
-            android:layout_marginStart="60dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.35" />
+            motion:layout_constraintCircle="@id/lMask"
+            motion:layout_constraintCircleRadius="@dimen/status_life_button_circle_radius"
+            motion:layout_constraintCircleAngle="270" />
 
         <Constraint
             android:id="@+id/vWind"
             android:layout_width="@dimen/status_life_button_width"
             android:layout_height="@dimen/status_life_button_height"
-            android:layout_marginEnd="60dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.35" />
+            motion:layout_constraintCircle="@id/lMask"
+            motion:layout_constraintCircleRadius="@dimen/status_life_button_circle_radius"
+            motion:layout_constraintCircleAngle="90" />
 
         <Constraint
             android:id="@+id/vEarth"
             android:layout_width="@dimen/status_life_button_width"
             android:layout_height="@dimen/status_life_button_height"
-            android:layout_marginEnd="110dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.18" />
+            motion:layout_constraintCircle="@id/lMask"
+            motion:layout_constraintCircleRadius="@dimen/status_life_button_circle_radius"
+            motion:layout_constraintCircleAngle="30"/>
 
         <Constraint
             android:id="@+id/vEat"
             android:layout_width="@dimen/status_life_button_width"
             android:layout_height="@dimen/status_life_button_height"
-            android:layout_marginStart="110dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.18" />
+            motion:layout_constraintCircle="@id/lMask"
+            motion:layout_constraintCircleRadius="@dimen/status_life_button_circle_radius"
+            motion:layout_constraintCircleAngle="330" />
 
     </ConstraintSet>
 
@@ -144,16 +133,16 @@
             android:id="@+id/vUser"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.345" />
+            motion:layout_constraintBottom_toBottomOf="@id/lMask"
+            motion:layout_constraintEnd_toEndOf="@id/lMask"
+            motion:layout_constraintTop_toTopOf="@id/lMask"
+            motion:layout_constraintStart_toStartOf="@id/lMask" />
 
         <Constraint
             android:id="@+id/vHeart"
             android:layout_width="@dimen/status_life_button_reduced_width"
             android:layout_height="@dimen/status_life_button_reduced_height"
+            android:layout_marginStart="2dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
@@ -163,6 +152,7 @@
             android:id="@+id/vTime"
             android:layout_width="@dimen/status_life_button_reduced_width"
             android:layout_height="@dimen/status_life_button_reduced_height"
+            android:layout_marginStart="4dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
@@ -172,6 +162,7 @@
             android:id="@+id/vFire"
             android:layout_width="@dimen/status_life_button_reduced_width"
             android:layout_height="@dimen/status_life_button_reduced_height"
+            android:layout_marginStart="6dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
@@ -181,6 +172,7 @@
             android:id="@+id/vWind"
             android:layout_width="@dimen/status_life_button_reduced_width"
             android:layout_height="@dimen/status_life_button_reduced_height"
+            android:layout_marginStart="2dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
@@ -190,6 +182,7 @@
             android:id="@+id/vEarth"
             android:layout_width="@dimen/status_life_button_reduced_width"
             android:layout_height="@dimen/status_life_button_reduced_height"
+            android:layout_marginStart="1.2dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
@@ -199,6 +192,7 @@
             android:id="@+id/vEat"
             android:layout_width="@dimen/status_life_button_reduced_width"
             android:layout_height="@dimen/status_life_button_reduced_height"
+            android:layout_marginStart="5dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
