--- a/app/src/main/res/xml/scene_my_status_arc_chart_in.xml
+++ b/app/src/main/res/xml/scene_my_status_arc_chart_in.xml
@@ -159,11 +159,10 @@
             android:id="@+id/vUser"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.345" />
+            motion:layout_constraintBottom_toBottomOf="@id/lMask"
+            motion:layout_constraintEnd_toEndOf="@id/lMask"
+            motion:layout_constraintTop_toTopOf="@id/lMask"
+            motion:layout_constraintStart_toStartOf="@id/lMask"  />
 
         <Constraint
             android:id="@+id/vHeart"
@@ -239,242 +238,60 @@
             android:id="@+id/vUser"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.337" />
+            motion:layout_constraintBottom_toBottomOf="@id/lMask"
+            motion:layout_constraintEnd_toEndOf="@id/lMask"
+            motion:layout_constraintTop_toTopOf="@id/lMask"
+            motion:layout_constraintStart_toStartOf="@id/lMask" />
 
         <Constraint
             android:id="@+id/vHeart"
             android:layout_width="@dimen/status_life_button_width"
             android:layout_height="@dimen/status_life_button_height"
-            android:layout_marginEnd="110dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.50" />
+            motion:layout_constraintCircle="@id/lMask"
+            motion:layout_constraintCircleRadius="@dimen/status_life_button_circle_radius"
+            motion:layout_constraintCircleAngle="150"/>
 
         <Constraint
             android:id="@+id/vTime"
             android:layout_width="@dimen/status_life_button_width"
             android:layout_height="@dimen/status_life_button_height"
-            android:layout_marginStart="110dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.50" />
+            motion:layout_constraintCircle="@id/lMask"
+            motion:layout_constraintCircleRadius="@dimen/status_life_button_circle_radius"
+            motion:layout_constraintCircleAngle="210"/>
 
         <Constraint
             android:id="@+id/vFire"
             android:layout_width="@dimen/status_life_button_width"
             android:layout_height="@dimen/status_life_button_height"
-            android:layout_marginStart="60dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.35" />
+            motion:layout_constraintCircle="@id/lMask"
+            motion:layout_constraintCircleRadius="@dimen/status_life_button_circle_radius"
+            motion:layout_constraintCircleAngle="270" />
 
         <Constraint
             android:id="@+id/vWind"
             android:layout_width="@dimen/status_life_button_width"
             android:layout_height="@dimen/status_life_button_height"
-            android:layout_marginEnd="60dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.35" />
+            motion:layout_constraintCircle="@id/lMask"
+            motion:layout_constraintCircleRadius="@dimen/status_life_button_circle_radius"
+            motion:layout_constraintCircleAngle="90" />
 
         <Constraint
             android:id="@+id/vEarth"
             android:layout_width="@dimen/status_life_button_width"
             android:layout_height="@dimen/status_life_button_height"
-            android:layout_marginEnd="110dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.18" />
+            motion:layout_constraintCircle="@id/lMask"
+            motion:layout_constraintCircleRadius="@dimen/status_life_button_circle_radius"
+            motion:layout_constraintCircleAngle="30"/>
 
         <Constraint
             android:id="@+id/vEat"
             android:layout_width="@dimen/status_life_button_width"
             android:layout_height="@dimen/status_life_button_height"
-            android:layout_marginStart="110dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintVertical_bias="0.18" />
+            motion:layout_constraintCircle="@id/lMask"
+            motion:layout_constraintCircleRadius="@dimen/status_life_button_circle_radius"
+            motion:layout_constraintCircleAngle="330"/>
 
     </ConstraintSet>
 
-// not working if here
-    <!--<Transition-->
-        <!--android:id="@+id/tr_slide"-->
-        <!--motion:constraintSetStart="@id/end_slide"-->
-        <!--motion:constraintSetEnd="@+id/start_slide"-->
-        <!--motion:duration="1000"-->
-        <!--motion:motionInterpolator="linear">-->
-
-        <!--<OnSwipe-->
-            <!--motion:dragDirection="dragUp"-->
-            <!--motion:touchAnchorId="@+id/vHeart"-->
-            <!--motion:touchAnchorSide="top"-->
-            <!--motion:onTouchUp="decelerateAndComplete"/>-->
-
-    <!--</Transition>-->
-
-    <!--<ConstraintSet android:id="@+id/start_slide">-->
-
-        <!--<Constraint-->
-            <!--android:id="@+id/vUser"-->
-            <!--android:layout_width="48dp"-->
-            <!--android:layout_height="48dp"-->
-            <!--motion:layout_constraintBottom_toBottomOf="parent"-->
-            <!--motion:layout_constraintEnd_toEndOf="parent"-->
-            <!--motion:layout_constraintStart_toStartOf="parent"-->
-            <!--motion:layout_constraintTop_toTopOf="parent"-->
-            <!--motion:layout_constraintVertical_bias="0.337" />-->
-
-        <!--<Constraint-->
-            <!--android:id="@+id/vHeart"-->
-            <!--android:layout_width="@dimen/status_life_button_width"-->
-            <!--android:layout_height="@dimen/status_life_button_height"-->
-            <!--android:layout_marginEnd="110dp"-->
-            <!--motion:layout_constraintBottom_toBottomOf="parent"-->
-            <!--motion:layout_constraintEnd_toEndOf="parent"-->
-            <!--motion:layout_constraintTop_toTopOf="parent"-->
-            <!--motion:layout_constraintVertical_bias="0.50" />-->
-
-        <!--<Constraint-->
-            <!--android:id="@+id/vTime"-->
-            <!--android:layout_width="@dimen/status_life_button_width"-->
-            <!--android:layout_height="@dimen/status_life_button_height"-->
-            <!--android:layout_marginStart="110dp"-->
-            <!--motion:layout_constraintBottom_toBottomOf="parent"-->
-            <!--motion:layout_constraintStart_toStartOf="parent"-->
-            <!--motion:layout_constraintTop_toTopOf="parent"-->
-            <!--motion:layout_constraintVertical_bias="0.50" />-->
-
-        <!--<Constraint-->
-            <!--android:id="@+id/vFire"-->
-            <!--android:layout_width="32dp"-->
-            <!--android:layout_height="@dimen/status_life_button_height"-->
-            <!--android:layout_marginStart="60dp"-->
-            <!--motion:layout_constraintBottom_toBottomOf="parent"-->
-            <!--motion:layout_constraintStart_toStartOf="parent"-->
-            <!--motion:layout_constraintTop_toTopOf="parent"-->
-            <!--motion:layout_constraintVertical_bias="0.35" />-->
-
-        <!--<Constraint-->
-            <!--android:id="@+id/vWind"-->
-            <!--android:layout_width="@dimen/status_life_button_width"-->
-            <!--android:layout_height="@dimen/status_life_button_height"-->
-            <!--android:layout_marginEnd="60dp"-->
-            <!--motion:layout_constraintBottom_toBottomOf="parent"-->
-            <!--motion:layout_constraintEnd_toEndOf="parent"-->
-            <!--motion:layout_constraintTop_toTopOf="parent"-->
-            <!--motion:layout_constraintVertical_bias="0.35" />-->
-
-        <!--<Constraint-->
-            <!--android:id="@+id/vEarth"-->
-            <!--android:layout_width="@dimen/status_life_button_width"-->
-            <!--android:layout_height="@dimen/status_life_button_height"-->
-            <!--android:layout_marginEnd="110dp"-->
-            <!--motion:layout_constraintBottom_toBottomOf="parent"-->
-            <!--motion:layout_constraintEnd_toEndOf="parent"-->
-            <!--motion:layout_constraintTop_toTopOf="parent"-->
-            <!--motion:layout_constraintVertical_bias="0.18" />-->
-
-        <!--<Constraint-->
-            <!--android:id="@+id/vEat"-->
-            <!--android:layout_width="@dimen/status_life_button_width"-->
-            <!--android:layout_height="@dimen/status_life_button_height"-->
-            <!--android:layout_marginStart="110dp"-->
-            <!--motion:layout_constraintBottom_toBottomOf="parent"-->
-            <!--motion:layout_constraintStart_toStartOf="parent"-->
-            <!--motion:layout_constraintTop_toTopOf="parent"-->
-            <!--motion:layout_constraintVertical_bias="0.18" />-->
-
-    <!--</ConstraintSet>-->
-
-    <!--<ConstraintSet android:id="@+id/end_slide">-->
-
-        <!--<Constraint-->
-            <!--android:id="@+id/vUser"-->
-            <!--android:layout_width="28dp"-->
-            <!--android:layout_height="28dp"-->
-            <!--motion:layout_constraintBottom_toBottomOf="parent"-->
-            <!--motion:layout_constraintEnd_toEndOf="parent"-->
-            <!--motion:layout_constraintStart_toStartOf="parent"-->
-            <!--motion:layout_constraintTop_toTopOf="parent"-->
-            <!--motion:layout_constraintVertical_bias="0.345" />-->
-
-        <!--<Constraint-->
-            <!--android:id="@+id/vHeart"-->
-            <!--android:layout_width="@dimen/status_life_button_reduced_width"-->
-            <!--android:layout_height="@dimen/status_life_button_reduced_height"-->
-            <!--android:layout_marginStart="16dp"-->
-            <!--android:layout_marginBottom="8dp"-->
-            <!--motion:layout_constraintBottom_toBottomOf="parent"-->
-            <!--motion:layout_constraintStart_toStartOf="parent"-->
-            <!--motion:layout_constraintTop_toTopOf="parent"-->
-            <!--motion:layout_constraintVertical_bias="0.08" />-->
-
-        <!--<Constraint-->
-            <!--android:id="@+id/vTime"-->
-            <!--android:layout_width="@dimen/status_life_button_reduced_width"-->
-            <!--android:layout_height="@dimen/status_life_button_reduced_height"-->
-            <!--android:layout_marginStart="39dp"-->
-            <!--android:layout_marginBottom="8dp"-->
-            <!--motion:layout_constraintBottom_toBottomOf="parent"-->
-            <!--motion:layout_constraintStart_toEndOf="@id/vHeart"-->
-            <!--motion:layout_constraintTop_toTopOf="parent"-->
-            <!--motion:layout_constraintVertical_bias="0.08" />-->
-
-        <!--<Constraint-->
-            <!--android:id="@+id/vFire"-->
-            <!--android:layout_width="@dimen/status_life_button_reduced_width"-->
-            <!--android:layout_height="@dimen/status_life_button_reduced_height"-->
-            <!--android:layout_marginStart="39dp"-->
-            <!--android:layout_marginBottom="8dp"-->
-            <!--motion:layout_constraintBottom_toBottomOf="parent"-->
-            <!--motion:layout_constraintStart_toEndOf="@id/vTime"-->
-            <!--motion:layout_constraintTop_toTopOf="parent"-->
-            <!--motion:layout_constraintVertical_bias="0.08" />-->
-
-        <!--<Constraint-->
-            <!--android:id="@+id/vWind"-->
-            <!--android:layout_width="@dimen/status_life_button_reduced_width"-->
-            <!--android:layout_height="@dimen/status_life_button_reduced_height"-->
-            <!--android:layout_marginStart="39dp"-->
-            <!--android:layout_marginBottom="8dp"-->
-            <!--motion:layout_constraintBottom_toBottomOf="parent"-->
-            <!--motion:layout_constraintStart_toEndOf="@id/vFire"-->
-            <!--motion:layout_constraintTop_toTopOf="parent"-->
-            <!--motion:layout_constraintVertical_bias="0.08" />-->
-
-        <!--<Constraint-->
-            <!--android:id="@+id/vEarth"-->
-            <!--android:layout_width="@dimen/status_life_button_reduced_width"-->
-            <!--android:layout_height="@dimen/status_life_button_reduced_height"-->
-            <!--android:layout_marginStart="39dp"-->
-            <!--android:layout_marginBottom="8dp"-->
-            <!--motion:layout_constraintBottom_toBottomOf="parent"-->
-            <!--motion:layout_constraintStart_toEndOf="@id/vWind"-->
-            <!--motion:layout_constraintTop_toTopOf="parent"-->
-            <!--motion:layout_constraintVertical_bias="0.08" />-->
-
-        <!--<Constraint-->
-            <!--android:id="@+id/vEat"-->
-            <!--android:layout_width="@dimen/status_life_button_reduced_width"-->
-            <!--android:layout_height="@dimen/status_life_button_reduced_height"-->
-            <!--android:layout_marginStart="39dp"-->
-            <!--android:layout_marginBottom="8dp"-->
-            <!--motion:layout_constraintBottom_toBottomOf="parent"-->
-            <!--motion:layout_constraintStart_toEndOf="@id/vEarth"-->
-            <!--motion:layout_constraintTop_toTopOf="parent"-->
-            <!--motion:layout_constraintVertical_bias="0.08" />-->
-
-    <!--</ConstraintSet>-->
 
 </MotionScene>
