--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -86,7 +86,25 @@
 
 
     <style name="SeparatorStyle">
+        <item name="android:layout_height">1dp</item>
         <item name="android:layout_marginTop">@dimen/activity_vertical_margin</item>
         <item name="android:background">@color/colorSeparator</item>
     </style>
+
+    <style name="DefaultLinkText">
+        <item name="android:textColor">@color/link</item>
+    </style>
+
+    <style name="FacebookButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:textColor">@color/colorWhiteText</item>
+        <item name="android:background">@color/facebookButton</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="TwitterButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:textColor">@color/colorWhiteText</item>
+        <item name="android:background">@color/twitterButton</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
 </resources>
